src/test/compile-fail/put-in-fn.rs
// xfail-stage1
// xfail-stage2
// xfail-stage3
// error-pattern:put in non-iterator

fn f() -> int { put 10; }

fn main() { }
